updated index file

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Public un projet sur git depuis vscoded</h1>
+    <h2> Mon Premier site publier sur git pages</h2>
 </body>
 </html>
